# dayplot

./: .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  search.json  setup.py  sitemap.xml  zensical.toml
.github/workflows/: lint.yaml  site.yaml  unit-test.yaml
contributing/: index.html
dayplot/: __init__.py  _docs_matplotlib.py  _parse_date.py  calendar.py  data.py  fetch_github.py  github.py  main.py  sample.csv  styles.py  utils.py
dayplot/data/: sample.csv
docs/: contributing.md  gallery.md  index.md
docs/img/: interactive.html  make.py
docs/reference/: calendar.md  fetch_github_contrib.md  load_dataset.md
docs/scripts/: advanced.py  gallery.py  make.py  quick_start.py
docs/stylesheets/: style.css
docs/tuto/: advanced.md  basic-styling.md  boxstyle.md  built-in-styles.md  categorical-data.md  combine-charts.md  fetch-github-contribs.md  interactive.md  legend.md  month-grid.md  negative-values.md
img/: make.py
overrides/partials/: footer.html
reference/calendar/: index.html
reference/fetch_github_contrib/: index.html
reference/load_dataset/: index.html
scripts/: advanced.py  coverage.sh  quick_start.py
search/: search_index.json
tests/: test_data.py  test_fetch_github.py  test_main.py  test_parse_date.py
tuto/advanced/: index.html
tuto/basic-styling/: index.html
tuto/boxstyle/: index.html
tuto/built-in-styles/: index.html
tuto/categorical-data/: index.html
tuto/combine-charts/: index.html
tuto/fetch-github-contribs/: index.html
tuto/interactive/: index.html
tuto/legend/: index.html
tuto/month-grid/: index.html
tuto/negative-values/: index.html
